# zot

./: .gitignore  BACKLOG.md  Cargo.toml  README.md
src/: main.rs  output.rs
src/api/: client.rs  mod.rs  models.rs
src/commands/: authors_cmd.rs  find_cmd.rs  fulltext_cmd.rs  get_cmd.rs  index_cmd.rs  mod.rs  pdf_cmd.rs  search_cmd.rs  tags_cmd.rs
src/index/: chunker.rs  embedder.rs  html.rs  mod.rs  pdf.rs  reranker.rs  store.rs
src/search/: hybrid.rs  mod.rs
