[package]
name = "zot"
version = "0.2.1"
edition = "2021"
description = "CLI for querying Zotero libraries with hybrid semantic search"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
directories = "6.0"
fastembed = "5.13"
oxidize-pdf = "=4.2.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tantivy = "0.22"
url = "2.5"
urlencoding = "2.1"
